--- a/exempleJupyterBinder.ipynb
+++ b/exempleJupyterBinder.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mon notebook R pour FAIR_Bioinfo \n",
-    "## Partie I\n",
+    "# My notebook R for FAIR_Bioinfo \n",
+    "## Part I\n",
     "\n",
-    "Je vais faire un plot "
+    "I'm going to make a plot."
    ]
   },
   {
